--- a/index.html
+++ b/index.html
@@ -138,13 +138,14 @@
 							<section id="cta" class="main">
 								<header class="major">
 									<h2>Education</h2>
-									<p><strong>Bachelor of Arts in Statistics</strong> — Cornell University<br>
-									Jul 2021 – Apr 2024</p>
-									<p>Bachelor of Arts in Statistics with Minors in Computer Science and Mathematics</p>
+									<p><strong>Bachelor of Science in Statistics and Machine Learning</strong><br>
+										Carnegie Mellon University<br>
+										Aug 2024 – May 2028</p>
 								</header>
 
 								<!-- Coursework -->
 								<div class="coursework-container">
+									<h3>Key Coursework and Skills</h3>
 									<div class="scrolling-coursework">
 										<div class="scrolling-track">
 											<span class="course-tag">Statistics</span>
@@ -152,9 +153,9 @@
 											<span class="course-tag">Mathematics</span>
 											<span class="course-tag">Linear Algebra</span>
 											<span class="course-tag">Machine Learning</span>
-											<span class="course-tag">Data Mining</span>
 											<span class="course-tag">Python</span>
 											<span class="course-tag">R</span>
+											<span class="course-tag">C</span>
 											<span class="course-tag">Probability Theory</span>
 											<span class="course-tag">Data Structures</span>
 											<!-- Duplicate once -->
@@ -163,9 +164,9 @@
 											<span class="course-tag">Mathematics</span>
 											<span class="course-tag">Linear Algebra</span>
 											<span class="course-tag">Machine Learning</span>
-											<span class="course-tag">Data Mining</span>
 											<span class="course-tag">Python</span>
 											<span class="course-tag">R</span>
+											<span class="course-tag">C</span>
 											<span class="course-tag">Probability Theory</span>
 											<span class="course-tag">Data Structures</span>
 										</div>
@@ -177,10 +178,10 @@
 								<div class="edu-grid">
 									<div class="edu-card">
 										<h3>Academic Highlights</h3>
-										<p><strong>GPA:</strong> 3.7/4.0</p>
-										<p><strong>Major:</strong> Statistics</p>
-										<p><strong>Minors:</strong> CS & Math</p>
-										<p><strong>Honors:</strong> Dean's List for Academic Achievement</p>
+										<p><strong>GPA:</strong> 4.0/4.0</p>
+										<p><strong>Major:</strong> Statistics and Machine Learning</p>
+										<p><strong>Minor:</strong> Financial Management</p>
+										<p><strong>Honors:</strong> Dean's List High Honors</p>
 									</div>
 
 									<!-- Leadership & Activities -->
@@ -188,23 +189,10 @@
 										<h3>Leadership & Activities</h3>
 
 										<details class="dropdown-card">
-											<summary><strong>Cornell Consulting Club</strong> <span class="badge">Vice President Recruitment</span></summary>
-											<p>Led initiatives to recruit 50+ students into consulting training program.</p>
-										</details>
-
-										<details class="dropdown-card">
-											<summary><strong>Quant Fund</strong> <span class="badge">Systematic Equities Lead</span></summary>
-											<p>Managed a long/short portfolio using ML-driven stock selection.</p>
-										</details>
-
-										<details class="dropdown-card">
-											<summary><strong>Delta Sigma Pi Professional Fraternity</strong> <span class="badge">Vice President</span></summary>
-											<p>Oversaw chapter operations and organized professional development events.</p>
-										</details>
-
-										<details class="dropdown-card">
-											<summary><strong>Graduate Level Probability Theory</strong> <span class="badge">Teaching Assistant</span></summary>
-											<p>Assisted graduate students with advanced probability theory concepts.</p>
+											<summary><strong>Introduction to Computer Science</strong> <span class="badge">Lead Teaching Assistant</span></summary>
+											<p>Oversee a team of 45+ TAs in coordinating course logistics and grading for an undergraduate Intro to CS course. Led weekly 
+												recitation sessions focused on data structures and algorithms for a class of 20 students, and held regular office hours 
+												to provide individualized academic support and mentorship.</p>
 										</details>
 									</div>
 								</div>
