--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 										or digging through messy datasets with SQL, I’m all about solving problems 
 										with clean, thoughtful code.<br>
 
-										Outside of tech, you’ll find me playing or watching 
-										sports, staying curious about the business world, 
+										Outside of tech, you’ll find me playing pickleball or watching 
+										sports F1, staying curious about the business world, 
 										and exploring how data drives decisions across industries.
 										</p>
 										<ul class="actions">
@@ -107,8 +107,11 @@
 								<div class="project-list">
 									<!-- Project 1 -->
 									<div class="project-card">
-										<h3><strong>Smart Traffic Prediction</strong></h3>
-										<p>Used real-time traffic and weather data to train a time-series forecasting model that predicts congestion with 90% accuracy.</p>
+										<h3><strong>2-D ShellShock</strong></h3>
+										<p>Developed a 2D turn-based tank artillery game using Python, inspired by ShellShock Live. Players battle an AI on terrain
+											 generated via recursive point creation and linear interpolation for smooth rendering. Projectile motion, calculated with vector math 
+											 for gravity and wind, uses 3D vector calculus for precise collision detection with bumpers and portals. The AI, built with modular 
+											 difficulty logic, employs strategic aiming, movements, and shot selection. A dynamic UI with trigonometric fuel gauges and gradients showcases a user-focused design.</p>
 										<footer class="card-footer">
 											<a href="#" class="button small">View</a>
 										</footer>
@@ -125,8 +128,12 @@
 
 									<!-- Project 3 -->
 									<div class="project-card">
-										<h3><strong>Spotify Listening Insights</strong></h3>
-										<p>Built a dashboard using Plotly and Dash to visualize trends in Spotify listening data, providing personalized listening stats and clusters.</p>
+										<h3><strong>Stack'd Overflow</strong></h3>
+										<p>Created a 2D sandwich-stacking game in Python for a hackathon with a team of four, where players build sandwiches by catching 
+											falling ingredients to match a goal configuration. Leveraged OpenCV and MediaPipe to implement real-time wrist-tracking via webcam, 
+											accurately mapping wrist x-coordinates to control the plate’s horizontal movement for intuitive gameplay. Procedurally generated goal 
+											sandwiches using random selection with biased ingredient spawning, implemented via recursive list construction. Falling ingredients, 
+											managed with dynamic speed adjustments based on level progression, utilize simple distance-based collision detection for stacking.</p>
 										<footer class="card-footer">
 											<a href="#" class="button small">View</a>
 										</footer>
@@ -150,24 +157,24 @@
 										<div class="scrolling-track">
 											<span class="course-tag">Statistics</span>
 											<span class="course-tag">Computer Science</span>
-											<span class="course-tag">Mathematics</span>
+											<!--<span class="course-tag">Mathematics</span> -->
 											<span class="course-tag">Linear Algebra</span>
 											<span class="course-tag">Machine Learning</span>
 											<span class="course-tag">Python</span>
 											<span class="course-tag">R</span>
 											<span class="course-tag">C</span>
-											<span class="course-tag">Probability Theory</span>
+											<!--<span class="course-tag">Probability Theory</span> -->
 											<span class="course-tag">Data Structures</span>
 											<!-- Duplicate once -->
 											<span class="course-tag">Statistics</span>
 											<span class="course-tag">Computer Science</span>
-											<span class="course-tag">Mathematics</span>
+											<!--<span class="course-tag">Mathematics</span> -->
 											<span class="course-tag">Linear Algebra</span>
 											<span class="course-tag">Machine Learning</span>
 											<span class="course-tag">Python</span>
 											<span class="course-tag">R</span>
 											<span class="course-tag">C</span>
-											<span class="course-tag">Probability Theory</span>
+											<!--<span class="course-tag">Probability Theory</span> -->
 											<span class="course-tag">Data Structures</span>
 										</div>
 									</div>
@@ -190,14 +197,13 @@
 
 										<details class="dropdown-card">
 											<summary><strong>Introduction to Computer Science</strong> <span class="badge">Lead Teaching Assistant</span></summary>
-											<p>Oversee a team of 45+ TAs in coordinating course logistics and grading for an undergraduate Intro to CS course. Led weekly 
-												recitation sessions focused on data structures and algorithms for a class of 20 students, and held regular office hours 
+											<p>Oversee a team of 40+ TAs in coordinating course logistics and grading for CMU's largest undergraduate Intro to CS course. Lead weekly 
+												recitation sessions focused on data structures and algorithms for a class of about 20 students, and held regular office hours 
 												to provide individualized academic support and mentorship.</p>
 										</details>
 									</div>
 								</div>
 							</section>
-
 					</div>
 
 				<!-- Footer -->
