--- a/index.html
+++ b/index.html
@@ -119,8 +119,11 @@
 
 									<!-- Project 2 -->
 									<div class="project-card">
-										<h3><strong>Resume Parser Web App</strong></h3>
-										<p>Developed a Flask-based web app that extracts structured data from PDFs and matches applicants to job descriptions using NLP.</p>
+										<h3><strong>Titanic Survival Prediction</strong></h3>
+										<p>Developed a machine learning project in R to predict Titanic passenger survival using a dataset with 622 observations and six predictors.
+											Conducted extensive exploratory data analysis and implemented and compared Linear Discriminant Analysis, Quadratic Discriminant Analysis, Classification Tree, 
+											and Binary Logistic Regression, evaluating error rates to determine predictive power.
+										</p>
 										<footer class="card-footer">
 											<a href="#" class="button small">View</a>
 										</footer>
