Finished all work experience cards

--- a/index.html
+++ b/index.html
@@ -76,24 +76,55 @@
 								<div class="job-list">
 									<!-- Job 1 -->
 									<div class="job-card">
-										<h3><strong>Software Engineering Intern</strong> — ABC Tech</h3>
-										<p class="subheader">May 2024 – August 2024 | New York, NY</p>
+										<h3><strong>IT Intern</strong></h3>
+										<p class="subheader"><strong>Stereotaxis</strong> <br>
+											May 2025 – Present</p>
 										<ul>
-											<li>Built and deployed a REST API using Flask and PostgreSQL to serve 20K+ daily client requests.</li>
-											<li>Collaborated with a cross-functional team to reduce API latency by 40% through code profiling and caching.</li>
-											<li>Wrote unit tests and documentation, improving coverage from 65% to 92%.</li>
+											<li>Developed an automated remittance email system for thousands of invoices using SQL and the Messaging API, streamlining payment notifications and saving the accounting team at least 5 hours weekly.</li>
+											<li>Built interactive dashboards in Excel and Power BI to monitor overdue invoices, enabling targeted recovery actions that recouped over 2 million dollars in outstanding revenue</li>
+											<li>Automated a high-volume invoice approval workflow using Power Automate, reducing average processing time by 87% and increasing scalability across finance operations</li>
 										</ul>
+										<span class="course-tag">SQL</span>
+										<span class="course-tag">Power Automate</span>
+										<span class="course-tag">APIs</span>
+										<span class="course-tag">Power BI</span>
+										<span class="course-tag">Excel</span>
+										<span class="course-tag">Acounting</span>
 									</div>
 
 									<!-- Job 2 -->
 									<div class="job-card">
-										<h3><strong>Machine Learning Intern</strong> — DataLabs Inc.</h3>
-										<p class="subheader">January 2024 – April 2024 | Remote</p>
+										<h3><strong>Lead Teaching Assistant</strong></h3>
+										<p class="subheader"><strong>Carnegie Mellon University</strong> <br>
+											January 2025 – Present</p>
 										<ul>
-											<li>Developed a predictive model using XGBoost to forecast churn with 87% accuracy.</li>
-											<li>Cleaned and analyzed customer datasets with Python and SQL, identifying key churn indicators.</li>
-											<li>Presented findings to stakeholders, leading to a new customer retention strategy.</li>
+											<li>Deliver weekly lectures to 2 classes of 20 students to reinforce class topics such as data structures and algorithms in Python</li>
+											<li>Conducted research on industry trends and market data to support strategic-decision making</li>
+											<li>Lead a team of 40+ TAs in coordinating course logistics and grading</li>
 										</ul>
+										<span class="course-tag">Python</span>
+										<span class="course-tag">Communication</span>
+										<span class="course-tag">Leadership</span>
+										<span class="course-tag">Teaching</span>
+										<span class="course-tag">Prompt Engineer</span>
+									</div>
+
+									<!-- Job 3 -->
+									<div class="job-card">
+										<h3><strong>Consulting Intern</strong></h3>
+										<p class="subheader"><strong>Undivided Wealth Management</strong> <br>
+											May 2024 – August 2024</p>
+										<ul>
+											<li>Analyzed company financials to identify potential opportunities to streamline client onboarding processes</li>
+											<li>Conducted research on industry trends and market data to support strategic-decision making</li>
+											<li>Created data driven analysis generating actionable insights, leading to a new consulting service, generating an
+												additional revenue stream</li>
+										</ul>
+										<span class="course-tag">Data Analysis</span>
+										<span class="course-tag">Presenting</span>
+										<span class="course-tag">R</span>
+										<span class="course-tag">Powerpoint</span>
+										<span class="course-tag">Finance</span>
 									</div>
 								</div>
 							</section>
@@ -113,7 +144,7 @@
 											 for gravity and wind, uses 3D vector calculus for precise collision detection with bumpers and portals. The AI, built with modular 
 											 difficulty logic, employs strategic aiming, movements, and shot selection. A dynamic UI with trigonometric fuel gauges and gradients showcases a user-focused design.</p>
 										<footer class="card-footer">
-											<a href="#" class="button small">View</a>
+											<a href="https://github.com/tshakeel05/ShellShock" class="button small">View</a>
 										</footer>
 									</div>
 
@@ -125,7 +156,7 @@
 											and Binary Logistic Regression, evaluating error rates to determine predictive power.
 										</p>
 										<footer class="card-footer">
-											<a href="#" class="button small">View</a>
+											<a href="https://tshakeel05.github.io/assets/pdfs/Titanic-Project.pdf" class="button small">View</a>
 										</footer>
 									</div>
 
@@ -138,7 +169,7 @@
 											sandwiches using random selection with biased ingredient spawning, implemented via recursive list construction. Falling ingredients, 
 											managed with dynamic speed adjustments based on level progression, utilize simple distance-based collision detection for stacking.</p>
 										<footer class="card-footer">
-											<a href="#" class="button small">View</a>
+											<a href="https://github.com/ZeRana/hack112" class="button small">View</a>
 										</footer>
 									</div>
 								</div>
