--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<p class="subheader"><strong>Stereotaxis</strong> <br>
 											May 2025 – Present</p>
 										<ul>
-											<li>Developed an automated remittance email system for thousands of invoices using SQL and the Messaging API, streamlining payment notifications and saving the accounting team at least 5 hours weekly.</li>
+											<li>Built an automated remittance email system for thousands of invoices using SQL and the Messaging API, streamlining payment notifications and saving the accounting team at least 5 hours weekly.</li>
 											<li>Built interactive dashboards in Excel and Power BI to monitor overdue invoices, enabling targeted recovery actions that recouped over 2 million dollars in outstanding revenue</li>
 											<li>Automated a high-volume invoice approval workflow using Power Automate, reducing average processing time by 87% and increasing scalability across finance operations</li>
 										</ul>
@@ -99,7 +99,7 @@
 											January 2025 – Present</p>
 										<ul>
 											<li>Deliver weekly lectures to 2 classes of 20 students to reinforce class topics such as data structures and algorithms in Python</li>
-											<li>Conducted research on industry trends and market data to support strategic-decision making</li>
+											<li>Evaluate assignments, quizzes, and test, and offer individualized support for hundreds of students </li>
 											<li>Lead a team of 40+ TAs in coordinating course logistics and grading</li>
 										</ul>
 										<span class="course-tag">Python</span>
