--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										and exploring how data drives decisions across industries.
 										</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Resume</a></li>
+											<li><a href="https://tshakeel05.github.io/assets/pdfs/Taha_Shakeel_Resume.pdf" class="button">Resume</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
