--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<!--<span class="image"><img src="images/ProHeadshotCropped.jpg" alt="" /></span>
+						<span class="logo"><img src="images/logo.svg" alt="" /></span> -->
+						<span class="image"><img src="images/tshakeel.jpg" alt="" /></span>
 						<h1><b>Taha Shakeel</b></h1>
 						<h2><b>Software Engineer</b></h2>
 						<p>Engineer with practical experience in machine 
@@ -63,7 +65,7 @@
 											<li><a href="https://tshakeel05.github.io/assets/pdfs/Taha_Shakeel_Resume.pdf" class="button">Resume</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<!-- <span class="image"><img src="images/tshakeel.jpg" alt="" /></span> -->
 								</div>
 							</section>
 
