--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								<div class="job-list">
 									<!-- Job 1 -->
 									<div class="job-card">
-										<h3><strong>IT Intern</strong></h3>
+										<h3><strong>Software Engineer Intern</strong></h3>
 										<p class="subheader"><strong>Stereotaxis</strong> <br>
 											May 2025 – Present</p>
 										<ul>
@@ -183,7 +183,7 @@
 									<h2>Education</h2>
 									<p><strong>Bachelor of Science in Statistics and Machine Learning</strong><br>
 										Carnegie Mellon University<br>
-										Aug 2024 – May 2028</p>
+										Aug 2024 – May 2027</p>
 								</header>
 
 								<!-- Coursework -->
@@ -275,3 +275,4 @@
 	</body>
 
 </html>
+
