--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<div class="job-card">
 										<h3><strong>Software Engineer Intern</strong></h3>
 										<p class="subheader"><strong>Stereotaxis</strong> <br>
-											May 2025 – Present</p>
+											May 2025 – Jan. 2025</p>
 										<ul>
 											<li>Built an automated remittance email system for thousands of invoices using SQL and the Messaging API, streamlining payment notifications and saving the accounting team at least 5 hours weekly.</li>
 											<li>Built interactive dashboards in Excel and Power BI to monitor overdue invoices, enabling targeted recovery actions that recouped over 2 million dollars in outstanding revenue</li>
@@ -231,6 +231,10 @@
 									<div class="edu-card">
 										<h3>Leadership & Activities</h3>
 
+										<details class="dropdown-card">
+											<summary><strong>Effetive Coding with AI</strong> <span class="badge">Head Teaching Assistant</span></summary>
+											<p></p>
+										</details>
 										<details class="dropdown-card">
 											<summary><strong>Introduction to Computer Science</strong> <span class="badge">Lead Teaching Assistant</span></summary>
 											<p>Oversee a team of 40+ TAs in coordinating course logistics and grading for CMU's largest undergraduate Intro to CS course. Lead weekly 
